<resources>
    <string name="app_name">TMDB App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="retry">retry</string>
    <string name="internet_connection_error">Internet connection error!</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="without_paging">Without paging</string>
    <string name="with_paging">With paging</string>
    <string name="without_db">Without DB</string>
    <string name="with_db">With DB</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account_yet">Don\'t have a account yet</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="recover">Recover</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="already_have_a_account">Already have a account ?</string>
    <string name="resend_otp_mess">OTP sent successfully</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_otp_text">Please enter the OTP,\n we have sent you on your Email Address.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="change_password">Change Password</string>
    <string name="otp_expires_in">OTP expires in %1$s</string>
    <string name="seconds">%1$d seconds</string>
    <string name="minute">%1$d:%2$s minute</string>
    <string name="minutes">%1$d:%2$s minutes</string>
    <string name="otp_expired">OTP Expired</string>
    <string name="enter_password">Enter a password</string>
    <string name="otp_expire_popup_msg">OTP has been expired. Please click on Resend OTP to proceed.</string>
    <string name="node_demo_logout">Node Demo Logout</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="chat">Chat</string>
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="camera">Camera</string>

    <string name="error_something_went_wrong_for_doc">Facing some error in showing the document currently. Please try again after sometime.</string>
    <string name="cannot_move_ahead_without_permission">Cannot move ahead without permission</string>

    <string name="cancel">Cancel</string>
    <string name="heads_up">Heads Up!!</string>
    <string name="ok">OK</string>
    <string name="file_not_recognized">File not found</string>
    <string name="unsupported_file_format">Unsupported file format</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="plot">Plot :</string>
    <string name="lbl_movie">Movie</string>
    <string name="lbl_genera">Drama</string>
    <string name="lbl_adult">U/A</string>
    <string name="lbl_cast">Cast :</string>
    <string name="lbl_director">Director :</string>
    <string name="more_like_this">More Like This</string>
    <string name="trailers_and_more">Trailers &amp; more</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="cast">Cast</string>
    <string name="producer">Producer</string>
    <string name="director">Director</string>
    <string name="similar_to_this">Similar to this</string>
    <string name="videos">Videos</string>

</resources>
