<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="homeVM"
            type="com.warlock.tmdb.ui.fragments.homeFragment.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        tools:context=".ui.fragments.homeFragment.HomeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:id="@+id/centerGuide"
            app:layout_constraintGuide_percent=".5"/>
        <TextView
            style="@style/Widget.TMDB.Header"
            android:id="@+id/tvHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/without_db"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btWithoutPaging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/without_paging"
            android:layout_marginEnd="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@+id/centerGuide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{v->clickListener.onClick(v)}"
            app:layout_constraintTop_toBottomOf="@id/tvHeader1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btWithPaging"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_height="wrap_content"
            android:text="@string/with_paging"
            android:onClick="@{v->clickListener.onClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/centerGuide"
            app:layout_constraintTop_toBottomOf="@id/tvHeader1" />

        <TextView
            style="@style/Widget.TMDB.Header"
            android:id="@+id/tvHeader2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/with_db"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btWithoutPaging" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btWithoutPagingDb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/without_paging"
            android:layout_marginEnd="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@+id/centerGuide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{v->clickListener.onClick(v)}"
            app:layout_constraintTop_toBottomOf="@id/tvHeader2" />




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btWithPagingDb"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_height="wrap_content"
            android:text="@string/with_paging"
            android:onClick="@{v->clickListener.onClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/centerGuide"
            app:layout_constraintTop_toBottomOf="@id/tvHeader2" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


